logs/Slang/generated/hdlconv/hdlconvertor_p335.sv.log
name: hdlconvertor_p335
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p335.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p335.sv:12:24: error: language feature not yet supported
  assign encoder_out = C#(8)::ENCODER_f(encoder_in);
                       ^~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p335.sv:13:24: error: language feature not yet supported
  assign decoder_out = C#(4)::DECODER_f(decoder_in);
                       ^~~~~~~~~~~~~~~~
